# ccr-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
ccr_mcp/: server.py
scripts/: ccr.service  ccr_segment.py  claude-hud-with-ccr.sh  config.example.json
