[project]
name = "ccr-mcp"
version = "0.1.0"
description = "MCP server that delegates tasks to a running claude-code-router instance"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
]

[project.scripts]
ccr-mcp = "ccr_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ccr_mcp"]
